fixed problems with css on mobile

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -6,14 +6,12 @@
 
 html, body {
   background-color: #d9534f;
-  color: #292b2c;
+  color: rgb(41, 43, 44);
   font-size: 16px;
-  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
+  width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 nav {
@@ -22,10 +20,12 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
-  bottom: 0;
+  height: 4.2rem;
+  background-color: #d9534f;
   width: 100%;
-  height: 10%;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
 nav a {
@@ -50,32 +50,31 @@ button {
   color: #292b2c;
 }
 
-.content {
-  width: 100%;
-  height: 90%;
-  text-transform: capitalize;
-}
-
-.content ul {
-  list-style-type: none;
-  background-color: #ae423f;
+section {
   width: 100%;
   height: 100%;
+  text-transform: capitalize;
+  background-color: #ae423f;
+  margin-top: 4.2rem;
+}
+
+section ul {
+  list-style-type: none;
+  background-color: #ae423f;
   padding: 1rem;
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.content ul li {
+section ul li {
   padding: 1.5rem 1.3rem;
   background-color: #d9534f;
   display: block;
   width: 100%;
 }
 
-.content ul li a {
+section ul li a {
   font-size: 1rem;
   text-decoration: none;
   color: #292b2c;
@@ -84,11 +83,11 @@ button {
   align-items: center;
 }
 
-.content ul li i {
+section ul li i {
   color: #292b2c;
 }
 
-.content ul li p a {
+section ul li p a {
   color: #0275d8;
 }
 
