--- a/public/stylesheets/watchlist.css
+++ b/public/stylesheets/watchlist.css
@@ -8,12 +8,10 @@ html, body {
   background-color: #d9534f;
   color: rgb(41, 43, 44);
   font-size: 16px;
-  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
+  width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 nav {
@@ -22,10 +20,12 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
-  bottom: 0;
+  height: 4.2rem;
+  background-color: #d9534f;
   width: 100%;
-  height: 10%;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
 nav a {
@@ -50,46 +50,45 @@ button {
   color: #292b2c;
 }
 
-.content {
-  width: 100%;
-  height: 90%;
-  text-transform: capitalize;
-}
-
-.content ul {
-  list-style-type: none;
-  background-color: #ae423f;
+section {
   width: 100%;
   height: 100%;
+  text-transform: capitalize;
+  background-color: #ae423f;
+  margin-top: 4.2rem;
+}
+
+section ul {
+  list-style-type: none;
+  background-color: #ae423f;
   padding: 1rem;
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  gap: 1.75rem;
   align-items: center;
 }
 
-.content ul li {
+section ul li {
   display: flex;
   align-items: center;
-  gap: 1.75rem;
   justify-content: space-around;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   padding: 1.5rem 1.3rem;
   border-radius: 0.75rem;
+  margin-bottom: 1.75rem;
 }
 
-.content ul li img {
+section ul li img {
   width: 10rem;
   height: auto;
   border-radius: 0.5rem;
+  padding-right: 1rem;
 }
 
-.content .show-info {
+section .show-info {
   width: 50%;
 }
 
-.content .show-info span {
+section .show-info span {
   display: block;
 }
 
@@ -140,27 +139,11 @@ button {
 }
 
 @media screen and (max-width: 767px) {
-  .content ul li {
+  section ul li {
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1253px) {
-  .content ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    gap: 2.3rem;
-  }
-
-  .content ul li {
-  }
-
-  .content ul li img {
-    width: 10rem;
-    height: auto;
-  }
-
   .content .show-info {
   }
 
@@ -196,25 +179,27 @@ button {
 }
 
 @media screen and (min-width: 1254px) {
-  .content ul {
+  section ul {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 1.75rem;
   }
 
-  .content ul li {
+  section ul li {
+    /* margin: 0 0.85rem; */
   }
 
-  .content ul li img {
+  section ul li img {
     width: 12rem;
     height: auto;
   }
 
-  .content .show-info {
+  section .show-info {
 
   }
 
-  .content .show-info span {
+  section .show-info span {
   }
 
   .show-info .show-name {
